Fix light/dark mode icons being swapped

--- a/.vitepress/theme/Layout.css
+++ b/.vitepress/theme/Layout.css
@@ -109,12 +109,7 @@ code {
   margin-top: .25rem;
   margin-left: 1.5rem;
   color: var(--c-text);
-  opacity: 0.75;
   cursor: pointer;
-}
-
-.mode-switch:hover {
-  opacity: 1;
 }
 
 .mode-switch .icon {
